@@ -1,3 +1,13 @@
+2004-07-07(Wed) 16:04:30 +0900  Koichi Sasada  <ko1@atdot.net>
+
+	* plugins/shellbot.nb, plugins/evalbot.nb : fix bugs
+	around constant search path
+
+	* ndk_state.rb(channel_member_mode) : added
+
+	* ndk_bot.rb : remove @raw_prefix
+
+
 2004-07-07(Wed) 10:18:51 +0900  Koichi Sasada  <ko1@atdot.net>
 
 	* plugins/weba.nb : fix some issues
